--- a/armor.html
+++ b/armor.html
@@ -1,129 +1,160 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>DeadPoly — Armor</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>DeadPoly Community Hub — Armor</title>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GD7LNZHQMM"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-GD7LNZHQMM');
+  </script>
+
   <style>
-    :root{--bg:#0b0b0f;--panel:#12121a;--panel2:#0f0f16;--line:#2a2a36;--text:#f2f2f2;--muted:#b7b7c2;--btn:#1c1c26;--btnHover:#262638;}
-    html,body{height:100%;margin:0;background:var(--bg);color:var(--text);font:14px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;}
-    a{color:inherit;text-decoration:none}
-    .topbar{position:sticky;top:0;z-index:999;background:linear-gradient(to bottom, rgba(10,10,14,.92), rgba(10,10,14,.7));backdrop-filter: blur(6px);border-bottom:1px solid var(--line);}
-    .topbar-inner{max-width:1200px;margin:0 auto;padding:10px 14px;display:flex;gap:10px;align-items:center;justify-content:space-between;}
-    .btn{display:inline-flex;align-items:center;gap:8px;background:var(--btn);border:1px solid var(--line);padding:8px 10px;border-radius:10px;transition:background .12s ease, transform .08s ease;}
+    :root{--bg:#0b0b0f;--panel:#14141b;--panel2:#101016;--text:#f2f2f2;--muted:#b7b7c2;--line:#2a2a36;--btn:#1c1c26;--btnHover:#242434}
+    html,body{height:100%;margin:0;background:var(--bg);color:var(--text);font:14px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
+    a{color:inherit}
+    .topbar{position:sticky;top:0;z-index:999;background:linear-gradient(to bottom, rgba(10,10,14,.92), rgba(10,10,14,.7));backdrop-filter: blur(6px);border-bottom:1px solid var(--line)}
+    .topbar-inner{max-width:1180px;margin:0 auto;padding:10px 14px;display:flex;gap:10px;align-items:center;justify-content:space-between}
+    .btn{display:inline-flex;align-items:center;gap:8px;background:var(--btn);border:1px solid var(--line);color:var(--text);padding:8px 10px;border-radius:10px;text-decoration:none;transition:transform .08s ease, background .12s ease;user-select:none}
     .btn:hover{background:var(--btnHover)} .btn:active{transform:scale(.98)}
-    .wrap{max-width:1200px;margin:0 auto;padding:18px 14px 40px}
-    h1{margin:0;font-size:26px;letter-spacing:.3px}
-    .sub{margin:6px 0 0;color:var(--muted)}
-    .bar{display:flex;gap:10px;align-items:center;flex-wrap:wrap;margin-top:14px}
-    .search{flex:1;min-width:240px;background:var(--panel);border:1px solid var(--line);border-radius:12px;padding:10px 12px;color:var(--text);outline:none;}
-    .card{margin-top:14px;background:linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,.01));border:1px solid var(--line);border-radius:16px;padding:14px;}
-    table{width:100%;border-collapse:separate;border-spacing:0;margin-top:8px;overflow:hidden;border-radius:14px;border:1px solid var(--line)}
-    thead th{background:rgba(255,255,255,.03);text-align:left;font-size:12px;color:var(--muted);padding:10px;border-bottom:1px solid var(--line)}
-    tbody td{padding:10px;border-bottom:1px solid rgba(255,255,255,.06);vertical-align:middle}
-    tbody tr:hover{background:rgba(255,255,255,.03)}
-    .thumb{width:64px;height:64px;object-fit:contain;background:rgba(0,0,0,.25);border:1px solid rgba(255,255,255,.08);border-radius:10px}
-    .name{font-weight:700}
+    .wrap{max-width:1180px;margin:0 auto;padding:18px 14px 40px}
+    h1{margin:0 0 6px;font-size:26px;letter-spacing:.3px}
+    .sub{margin:0 0 16px;color:var(--muted)}
+    .row{display:flex;gap:10px;flex-wrap:wrap;align-items:center;margin:12px 0 14px}
+    .search{flex:1;min-width:240px;background:var(--panel);border:1px solid var(--line);border-radius:12px;padding:10px 12px;color:var(--text);outline:none}
+    .pill{background:var(--panel);border:1px solid var(--line);border-radius:999px;padding:8px 10px;color:var(--text);cursor:pointer;user-select:none}
+    .pill.active{outline:2px solid #ffffff22}
+    .panel{background:linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,.01));border:1px solid var(--line);border-radius:16px;padding:12px;margin-top:12px}
+    .panel h2{margin:0 0 10px;font-size:18px}
+    table{width:100%;border-collapse:separate;border-spacing:0}
+    th,td{padding:10px;border-bottom:1px solid var(--line);vertical-align:middle}
+    th{color:#d9d9e6;font-weight:700;text-align:left;font-size:13px;letter-spacing:.2px}
+    tr:hover td{background:rgba(255,255,255,.02)}
+    .imgcell{width:56px}
+    .thumb{width:38px;height:38px;border-radius:10px;object-fit:contain;background:var(--panel2);border:1px solid var(--line)}
     .muted{color:var(--muted)}
-    .pill{display:inline-block;margin-top:10px;padding:6px 10px;border-radius:999px;border:1px solid var(--line);background:var(--panel2);color:var(--muted);font-size:12px}
+    .rightlinks{display:flex;gap:10px;align-items:center}
   </style>
 </head>
+
 <body>
   <div class="topbar">
     <div class="topbar-inner">
       <a class="btn" href="wiki.html">← Wiki</a>
-      <div class="sub" style="margin:0">Armor</div>
-      <a class="btn" href="https://deadpoly.wiki/Armor" target="_blank" rel="noopener">Official Page ↗</a>
+      <div class="muted">Armor</div>
+      <div class="rightlinks">
+        <a class="btn" href="https://deadpoly.wiki/Main_Page" target="_blank" rel="noopener">Official Wiki ↗</a>
+      </div>
     </div>
   </div>
 
   <div class="wrap">
-    <div>
-      <h1>Body Armor</h1>
-      <div class="sub">Local table with official images (via Special:FilePath).</div>
-      <span class="pill">Each armor has multiple colors / styles.</span>
+    <h1>Body Armor</h1>
+    <div class="sub">Filter by armor type. (Colors/variants exist for many.)</div>
+
+    <div class="row">
+      <input id="q" class="search" placeholder="Search armor (ex: vest, SWAT, karuta)..." />
+      <div id="filters"></div>
     </div>
 
-    <div class="bar">
-      <input id="q" class="search" placeholder="Search armor (ex: vest, swat, tech, karuta)..." />
+    <div class="panel">
+      <h2 id="sectionTitle">All</h2>
+      <div style="overflow:auto">
+        <table>
+          <thead>
+            <tr>
+              <th class="imgcell"></th>
+              <th>Name</th>
+              <th>Type</th>
+              <th>Hot Bar Slots</th>
+              <th>Max Weight (KG)</th>
+              <th>Capacity</th>
+              <th>Standard Armor</th>
+              <th>AP Armor</th>
+              <th>Notes</th>
+            </tr>
+          </thead>
+          <tbody id="tb"></tbody>
+        </table>
+      </div>
     </div>
-
-    <div id="content" class="card"></div>
   </div>
 
 <script>
-  const armorData = [
-    {name:"Apocalypse Vest", file:"apoc_black.png", type:"Heavy", slots:"7", maxKg:"25", cap:"2x8", std:"10", ap:"5", notes:"Comes in 4 colors: Black, Blue, Green, Desert"},
-    {name:"Banana Suit", file:"banana_suit.jpg", type:"Full Body", slots:"4", maxKg:"N/A", cap:"N/A", std:"N/A", ap:"N/A", notes:""},
-    {name:"Cat Pajama", file:"cat_pajama_pink.png", type:"Full Body", slots:"4", maxKg:"N/A", cap:"N/A", std:"N/A", ap:"N/A", notes:"Comes in multiple Colors"},
-    {name:"Composite Armor", file:"composite_armor_blue.jpg", type:"Full Body", slots:"4", maxKg:"N/A", cap:"N/A", std:"18", ap:"0", notes:"Colors: Blue, Yellow"},
-    {name:"Dinosaur Pajama", file:"dinosaur_pajama_brown.jpg", type:"Full Body", slots:"4", maxKg:"N/A", cap:"N/A", std:"N/A", ap:"N/A", notes:"Colors: Brown"},
-    {name:"Heavy Vest", file:"heavy_green.png", type:"Heavy", slots:"7", maxKg:"25", cap:"2x8", std:"10", ap:"5", notes:"Camo sets: Flat Green, Jungle, Desert, Snowy"},
-    {name:"Hot Dog Suit", file:"hot_dog_suit_new.jpg", type:"Full Body", slots:"4", maxKg:"N/A", cap:"N/A", std:"N/A", ap:"N/A", notes:"2 variations: New and Damaged"},
-    {name:"Karuta Armor", file:"karuta_armor_yellow.jpg", type:"Full Body", slots:"4", maxKg:"N/A", cap:"N/A", std:"18", ap:"0", notes:"Colors: Red, Green, Yellow, Blue"},
-    {name:"Karuta Armor (Samurai)", file:"karuta_armor_samurai.jpg", type:"Full Body", slots:"4", maxKg:"N/A", cap:"N/A", std:"18", ap:"0", notes:""},
-    {name:"Light Vest", file:"light_green.png", type:"Light", slots:"4", maxKg:"N/A", cap:"N/A", std:"4", ap:"0", notes:"Camo sets: Flat Green, Jungle, Desert, Snowy"},
-    {name:"Medium Vest", file:"medium_green.png", type:"Medium", slots:"5", maxKg:"10", cap:"1x8", std:"7", ap:"2", notes:"Camo sets: Flat Green, Jungle, Desert, Snowy"},
-    {name:"Metal Armor", file:"Metal_Armor.png", type:"Light", slots:"4", maxKg:"N/A", cap:"N/A", std:"15", ap:"5", notes:"Colors: Grey, Silver, White, Green, Red"},
-    {name:"Press Vest", file:"press_vest.jpg", type:"Medium", slots:"5", maxKg:"12.5", cap:"1x8+4", std:"7", ap:"2", notes:""},
-    {name:"SWAT Vest", file:"Swat.png", type:"Medium", slots:"6", maxKg:"15", cap:"2x8", std:"7", ap:"3", notes:""},
-    {name:"Tech Armor", file:"tech_armor_white.jpg", type:"Full Body", slots:"4", maxKg:"N/A", cap:"N/A", std:"18", ap:"0", notes:"Colors: Blue, Black, Red, White"},
-    {name:"Tiger Pajama", file:"tiger_pajama_orange.jpg", type:"Full Body", slots:"4", maxKg:"N/A", cap:"N/A", std:"N/A", ap:"N/A", notes:"Colors: Green, Orange"},
+  const OFFICIAL = "https://deadpoly.wiki";
+  const fileUrl = (name) => `${OFFICIAL}/Special:FilePath/${encodeURIComponent(name)}`;
+
+  const data = [
+    {img:"apoc_black.png", name:"Apocalypse Vest", type:"Heavy", slots:"7", maxKg:"25", cap:"2x8", std:"10", ap:"5", notes:"Comes in 4 colors: Black, Blue, Green, Desert"},
+    {img:"banana_suit.jpg", name:"Banana Suit", type:"Full Body", slots:"4", maxKg:"N/A", cap:"N/A", std:"N/A", ap:"N/A", notes:""},
+    {img:"cat_pajama_pink.png", name:"Cat Pajama", type:"Full Body", slots:"4", maxKg:"N/A", cap:"N/A", std:"N/A", ap:"N/A", notes:"Multiple colors (example: Pink)"},
+    {img:"composite_armor_blue.jpg", name:"Composite Armor", type:"Full Body", slots:"4", maxKg:"N/A", cap:"N/A", std:"18", ap:"0", notes:"Multiple colors: Blue, Yellow"},
+    {img:"dinosaur_pajama_brown.jpg", name:"Dinosaur Pajama", type:"Full Body", slots:"4", maxKg:"N/A", cap:"N/A", std:"N/A", ap:"N/A", notes:"Multiple colors (example: Brown)"},
+    {img:"heavy_green.png", name:"Heavy Vest", type:"Heavy", slots:"7", maxKg:"25", cap:"2x8", std:"10", ap:"5", notes:"Flat Green, Jungle, Desert, Snowy"},
+    {img:"hot_dog_suit_new.jpg", name:"Hot Dog Suit", type:"Full Body", slots:"4", maxKg:"N/A", cap:"N/A", std:"N/A", ap:"N/A", notes:"2 variations: New and Damaged"},
+    {img:"karuta_armor_yellow.jpg", name:"Karuta Armor", type:"Full Body", slots:"4", maxKg:"N/A", cap:"N/A", std:"18", ap:"0", notes:"Red, Green, Yellow, Blue"},
+    {img:"karuta_armor_samurai.jpg", name:"Karuta Armor (Samurai)", type:"Full Body", slots:"4", maxKg:"N/A", cap:"N/A", std:"18", ap:"0", notes:""},
+    {img:"light_green.png", name:"Light Vest", type:"Light", slots:"4", maxKg:"N/A", cap:"N/A", std:"4", ap:"0", notes:"Flat Green, Jungle, Desert, Snowy"},
+    {img:"medium_green.png", name:"Medium Vest", type:"Medium", slots:"5", maxKg:"10", cap:"1x8", std:"7", ap:"2", notes:"Flat Green, Jungle, Desert, Snowy"},
+    {img:"Metal_Armor.png", name:"Metal Armor", type:"Light", slots:"4", maxKg:"N/A", cap:"N/A", std:"15", ap:"5", notes:"Grey, Silver, White, Green, Red"},
+    {img:"press_vest.jpg", name:"Press Vest", type:"Medium", slots:"5", maxKg:"12.5", cap:"1x8+4", std:"7", ap:"2", notes:""},
+    {img:"Swat.png", name:"SWAT Vest", type:"Medium", slots:"6", maxKg:"15", cap:"2x8", std:"7", ap:"3", notes:""},
+    {img:"tech_armor_white.jpg", name:"Tech Armor", type:"Full Body", slots:"4", maxKg:"N/A", cap:"N/A", std:"18", ap:"0", notes:"Blue, Black, Red, White"},
+    {img:"tiger_pajama_orange.jpg", name:"Tiger Pajama", type:"Full Body", slots:"4", maxKg:"N/A", cap:"N/A", std:"N/A", ap:"N/A", notes:"Green, Orange"}
   ];
 
+  const types = ["All", ...new Set(data.map(x => x.type))];
+  const filtersEl = document.getElementById("filters");
   const qEl = document.getElementById("q");
-  const contentEl = document.getElementById("content");
+  const tb = document.getElementById("tb");
+  const sectionTitle = document.getElementById("sectionTitle");
 
-  function filePathUrl(filename){
-    return "https://deadpoly.wiki/Special:FilePath/" + encodeURIComponent(filename);
-  }
-  function escapeHtml(s){
-    return String(s).replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
-  }
+  let active = "All";
+  types.forEach(t => {
+    const b = document.createElement("button");
+    b.className = "pill" + (t===active ? " active":"");
+    b.textContent = t;
+    b.onclick = () => {
+      active = t;
+      [...filtersEl.children].forEach(x => x.classList.remove("active"));
+      b.classList.add("active");
+      render();
+    };
+    filtersEl.appendChild(b);
+  });
+
+  qEl.addEventListener("input", render);
 
   function render(){
     const q = qEl.value.trim().toLowerCase();
-    const filtered = armorData.filter(a => {
-      if(!q) return true;
-      return (a.name+" "+a.type+" "+a.notes).toLowerCase().includes(q);
-    });
+    sectionTitle.textContent = active;
+    tb.innerHTML = "";
 
-    contentEl.innerHTML = `
-      <table>
-        <thead>
-          <tr>
-            <th style="width:86px">Image</th>
-            <th>Name</th>
-            <th style="width:110px">Type</th>
-            <th style="width:140px">Hot Bar Slots</th>
-            <th style="width:130px">Max Weight</th>
-            <th style="width:110px">Capacity</th>
-            <th style="width:120px">Std Armor</th>
-            <th style="width:90px">AP</th>
-            <th>Notes</th>
-          </tr>
-        </thead>
-        <tbody>
-          ${filtered.map(a => `
-            <tr>
-              <td>${a.file ? `<img class="thumb" src="${filePathUrl(a.file)}" alt="${escapeHtml(a.name)}">` : `<div class="thumb"></div>`}</td>
-              <td class="name">${escapeHtml(a.name)}</td>
-              <td class="muted">${escapeHtml(a.type)}</td>
-              <td class="muted">${escapeHtml(a.slots)}</td>
-              <td class="muted">${escapeHtml(a.maxKg)}</td>
-              <td class="muted">${escapeHtml(a.cap)}</td>
-              <td class="muted">${escapeHtml(a.std)}</td>
-              <td class="muted">${escapeHtml(a.ap)}</td>
-              <td class="muted">${escapeHtml(a.notes || "—")}</td>
-            </tr>
-          `).join("")}
-        </tbody>
-      </table>
-      <div class="muted" style="margin-top:10px;font-size:12px">Showing ${filtered.length} of ${armorData.length}.</div>
-    `;
+    data
+      .filter(r => active==="All" ? true : r.type===active)
+      .filter(r => !q ? true : JSON.stringify(r).toLowerCase().includes(q))
+      .forEach(r => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td class="imgcell"><img class="thumb" src="${fileUrl(r.img)}" alt=""></td>
+          <td><b>${esc(r.name)}</b></td>
+          <td class="muted">${esc(r.type)}</td>
+          <td>${esc(r.slots)}</td>
+          <td>${esc(r.maxKg)}</td>
+          <td>${esc(r.cap)}</td>
+          <td>${esc(r.std)}</td>
+          <td>${esc(r.ap)}</td>
+          <td class="muted">${esc(r.notes)}</td>
+        `;
+        tb.appendChild(tr);
+      });
   }
-
-  qEl.addEventListener("input", render);
+  function esc(s){return String(s??"").replace(/[&<>"']/g,m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]))}
   render();
 </script>
 </body>
